# OARK

./: .hgignore  LICENCE.md  README.md
android/: setup.sh
android-controller/app/: build.gradle  proguard-rules.pro
android-controller/app/src/main/: AndroidManifest.xml
android/EmuMini2/: build.gradle
android/EmuMini2/app/: build.gradle  proguard-rules.pro
android/LayoutTest/DynamicLayout/: build.gradle
android/LayoutTest/DynamicLayout/app/: build.gradle  proguard-rules.pro
android/activities/: ControlActivity.java  IPActivity.java  SplashActivity.java  activity_control.xml  activity_ip.xml  activity_splash.xml  strings.xml
android/controller/app/: build.gradle
android/net/: FourWWMsg.java  IMsg.java  Talker.java
android/projects/EmuMini2/app/: build.gradle
android/views/: README.md
android/views/analog_stick/: AnalogStickView.java  attrs_analog_stick_view.xml  sample_activity_control.xml
build-tools/: README.md  common-functions.sh
build-tools/arch-pkgs/dynamixel-control-msgs/: PKGBUILD
build-tools/arch-pkgs/dynamixel-controllers/: PKGBUILD
build-tools/arch-pkgs/dynamixel-driver/: PKGBUILD
build-tools/arch-pkgs/dynamixel-msgs/: PKGBUILD
build-tools/continuous-integration/: README.md
build-tools/disk/: create_rpi_image.sh  disk_utils.sh  install_arch_linux.sh  mount_image  mount_rpi_image  mount_rpi_image.sh  resize_rpi_image.sh
build-tools/emulation/: README.md  download_prepare_raspbian.sh  download_raspbian.sh  revert_raspbian_image.sh  start.sh  update_raspbian_image.sh
build-tools/kernel/: linux-arm-qemu.patch  qemu-kernel.config  setup.sh  vexpress-config.sed
build-tools/prepare-image/: ros-raspbian-install.sh  slim-raspbian.sh
build-tools/ros-raspbian-install/: setup.sh
build-tools/virtual-machine/: README.md  Vagrantfile
build-tools/virtual-machine/files/: ansible_hosts  hgrc  hostapd.conf  interfaces
build-tools/virtual-machine/files/playbooks/: 01-init.yaml  02-slimline_install.yaml  03-ros_indigo_install.yaml  04-gstreamer_setup.yaml  05-setup_camera.yaml  06-setup_tft_screen.yaml  07-update-firmware.yaml  07-wireless_ap.yaml  08-revert-kernel.yaml  09-wireless_ap.yaml  10-config_ui.yaml  11-oark_install.yaml  dynamite_build.yaml  gstreamer_setup.yaml  ros_indigo_install.yaml  setup_camera.yaml  wireless_ap.yaml
build-tools/virtual-machine/scripts/: bootstrap-raspbian.sh  bootstrap.sh  download-raspbian.sh  finalise-image.sh  generate-ssh-key.sh  install-oark.sh  pull-repo.sh  start-emulator.sh  wait-for-emulator-shutdown.sh  wait-for-emulator.sh
camera/: README.md  sensor_video.py  sensor_video_unittests.py
config-tool/: README.md  wifi_config.py  wifi_config_file.py  wifi_list.py
config-tool/test/files/: hostapd.conf
doc/: README.md  documentation.markdown  functional-spec.md  instructions  requirements.md
doc/initial-considerations/: ArduinovsPi.docx  middleware.txt
doc/mock-setup/: setup.md
doc/wiki/: ax12.markdown  control_node.markdown  development.markdown  network_node.markdown  oark-software.markdown  opencm.markdown  overall_structure.uml  programming-the-em2.markdown  raspberrypi.markdown  software_overview.markdown  video_node.markdown
opencm/: README.md  serial2_tosser.ino
opencm/serial2_tosser/: serial2_tosser.ino
ros-pkg/: IREADME.md  README.md  build-dynamite.sh  init-motors.sh  init_motors.py  install-dependencies.sh  ros-launch.sh
ros-pkg/src/dynamite/: CMakeLists.txt  README.md  package.xml
ros-pkg/src/dynamite/launch/: controller.launch  controller.yaml  (+5 more)
ros-pkg/src/emumini2/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
ros-pkg/src/oark/: CMakeLists.txt  emumini2.yaml  package.xml  ripper.yaml  sixwheeledwonder.yaml
ros-pkg/src/oark/launch/: oark.launch
ros-pkg/src/oark/msg/: Input.msg
ros-pkg/src/oark/robot/: demo.yaml  emumini2.yaml  ripper.yaml
ros-pkg/src/oark/src/camera/: pipeline.yaml  video_node.py
ros-pkg/src/oark/src/control/: control_node.py  manager.py  sample.yaml~  sample2.yaml~
ros-pkg/src/oark/src/net/: cmd_listener.py  makepacket.py  msg.py  net_consts.py  net_node.py
ros-pkg/src/oark/srv/: GetMotorStates.srv  StartStream.srv
ros-pkg/src/sixww/: CMakeLists.txt  package.xml
ros-pkg/src/sixww/launch/: controllers.yaml  manager.yaml  meta.yaml  sixww.launch
ros-pkg/src/sixww/msg/: CarCommand.msg
ros-pkg/src/sixww/nodes/: sixww_node.py
test/fakerobot/: FakeRobot.java  README.md
test/fakeservo/: ax12.py  const.py  fake2.py  fakeservo.py  motors.yaml  packet.py  recv.py  resources.txt  serial.py  test_packets.txt  utils.py
utils/: README.md  ap.sh  ap_bridge.sh  camera-stream.service  config-ui.sh  emumini2  fast_pi_env.sh  init-camera.sh  init-motors.sh  oark  prepare-wlan.sh  ros-launch.sh  ros-network-server.service  serial.sh  slow_pi_env.sh  start-motor-drivers.sh  stream-video.sh  update_camera_target_manual.sh~
utils/arch/: camera-stream.service  dhcpd4@.service  motor-driver.service  start-ros-network-server.sh
utils/gstreamer/: stream-video.sh  update_camera_target.sh  update_camera_target_manual.sh
(+186 files in other folders)
